--- a/Sale_Advertising_Budget.ipynb
+++ b/Sale_Advertising_Budget.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "🔍 Project Overview\n",
-    "This project explores a dataset containing advertising budgets across three channels — TV, Radio, and Newspaper — and aims to predict Sales ($) based on these investments using Linear Regression.\n",
+    "This project explores a dataset containing advertising budgets across three channels — TV(1,000$), Radio(1,000$), and Newspaper(1,000$) — and aims to predict Sales (M $) based on these investments using Linear Regression.\n",
     "\n",
     "Dataset: Advertising Budget and Sales.csv"
    ]
