Sale_Advertising_Budget.ipynb

--- a/Sale_Advertising_Budget.ipynb
+++ b/Sale_Advertising_Budget.ipynb
@@ -86,10 +86,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TV Ad Budget ($)</th>\n",
-       "      <th>Radio Ad Budget ($)</th>\n",
-       "      <th>Newspaper Ad Budget ($)</th>\n",
-       "      <th>Sales ($)</th>\n",
+       "      <th>TV Ad Budget (1000 $)</th>\n",
+       "      <th>Radio Ad Budget (1000 $)</th>\n",
+       "      <th>Newspaper Ad Budget (1000 $)</th>\n",
+       "      <th>Sales (1M $)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
