Sale_Advertising_Budget.ipynb

--- a/Sale_Advertising_Budget.ipynb
+++ b/Sale_Advertising_Budget.ipynb
@@ -176,7 +176,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     TV Ad Budget ($)  Radio Ad Budget ($)  Newspaper Ad Budget ($)  Sales ($)\n",
+       "     TV Ad Budget (1000 $)  Radio Ad Budget (1000 $)  Newspaper Ad Budget (1000 $)  Sales (1M $)\n",
        "0               230.1                 37.8                     69.2       22.1\n",
        "1                44.5                 39.3                     45.1       10.4\n",
        "2                17.2                 45.9                     69.3        9.3\n",
@@ -370,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(17.6304311802868)"
+       "np.float64(17.6304311802868) M $"
       ]
      },
      "execution_count": 7,
